results/testing/train_47b16_00000_0_activation=GELU,dropout=0.1382,hidden_dim=64,kernel_size=5,lr=0.0005,num_layers=4_2025-11-07_01-02-06/error.txt
Failure # 1 (occurred at 2025-11-07_01-05-38)
[36mray::ImplicitFunc.train()[39m (pid=52239, ip=10.144.151.105, actor_id=b429a8faa7acf3282eded44101000000, repr=train)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/viole/Desktop/Cyr/NAS/.venv/lib/python3.11/site-packages/ray/tune/trainable/trainable.py", line 331, in train
    raise skipped from exception_cause(skipped)
  File "/home/viole/Desktop/Cyr/NAS/.venv/lib/python3.11/site-packages/ray/air/_internal/util.py", line 107, in run
    self._ret = self._target(*self._args, **self._kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/viole/Desktop/Cyr/NAS/.venv/lib/python3.11/site-packages/ray/tune/trainable/function_trainable.py", line 44, in <lambda>
    training_func=lambda: self._trainable_func(self.config),
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/viole/Desktop/Cyr/NAS/.venv/lib/python3.11/site-packages/ray/tune/trainable/function_trainable.py", line 249, in _trainable_func
    output = fn()
             ^^^^
  File "/home/viole/Desktop/Cyr/NAS/main.py", line 80, in train
    tune.report(accuracy=acc)
  File "/home/viole/Desktop/Cyr/NAS/.venv/lib/python3.11/site-packages/ray/train/_internal/session.py", line 683, in wrapper
    return fn(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^
TypeError: report() got an unexpected keyword argument 'accuracy'
